# rabbitmq_tutorial

./: .gitignore  README.md  run_rabbit.sh
01_hello-world/: recieve.py  send.py
02_work-queues/: new_task.py  worker.py
03_pubsub/: emit_log.py  receive_logs.py
04_routing/: emit_log_direct.py  receive_logs_direct.py
05_topics/: emit_log_topic.py  receive_logs_topic.py
06_rpc/: rpc_client.py  rpc_server.py
tutorial_rs/: Cargo.toml
