[package]
name = "tutorial_rs"
version = "0.1.0"
authors = ["Renato <renato145@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "1.7.0"
clap = "3.0.0-beta.2"
tokio-amqp = "1.0.0"
tokio = { version = "1.5.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }
